--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .ep-btn.active { background: #e91e63; }
     #player { width: 100%; max-width: 800px; margin: 20px auto; height: 450px; }
     #back { background: #e91e63; color: white; padding: 10px 20px; border: none; border-radius: 8px; cursor: pointer; margin-bottom: 15px; }
-    #loading { text-align: center; padding: 20px; display: none; }
+    #loading { text-align: center; padding: 20px; display: none; color: #fff; }
     @media (max-width: 600px) { #content { grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); } #player { height: 300px; } }
   </style>
 </head>
@@ -44,7 +44,7 @@
 <input type="text" id="search" placeholder="Cari drama... (contoh: cinta, love, balas dendam)" />
 
 <div id="content"></div>
-<div id="loading">Memuat...</div>
+<div id="loading">Memuat... Sabar ya boss</div>
 
 <div id="detail">
   <button id="back">← Kembali</button>
@@ -55,6 +55,8 @@
 </div>
 
 <script>
+  const proxy = 'https://api.tatsumi-crew.net/proxy.php?url=';
+
   let currentSource = 'melolo';
   let currentPage = 1;
   let currentSearch = '';
@@ -102,12 +104,15 @@
     else if (currentSource === 'reelshort') url = `https://api.sonzaix.indevs.in/reelshort/populer?page=${currentPage}`;
 
     try {
-      const res = await fetch(url);
+      const proxied = proxy + encodeURIComponent(url);
+      const res = await fetch(proxied);
+      if (!res.ok) throw new Error(`Proxy error ${res.status}`);
       const json = await res.json();
       if (json.message !== 'success') throw new Error('API error');
       renderList(json.data || []);
     } catch (e) {
       content.innerHTML = `<p style="text-align:center;color:red;">Gagal load: ${e.message}</p>`;
+      console.error('Popular error:', e);
     } finally {
       loading.style.display = 'none';
     }
@@ -123,18 +128,22 @@
     else if (currentSource === 'reelshort') url = `https://api.sonzaix.indevs.in/reelshort/search?query=\( {encodeURIComponent(currentSearch)}&page= \){currentPage}`;
 
     try {
-      const res = await fetch(url);
+      const proxied = proxy + encodeURIComponent(url);
+      const res = await fetch(proxied);
+      if (!res.ok) throw new Error(`Proxy error ${res.status}`);
       const json = await res.json();
       if (json.message !== 'success') throw new Error('API error');
       renderList(json.data || []);
     } catch (e) {
       content.innerHTML = `<p style="text-align:center;color:red;">Gagal cari: ${e.message}</p>`;
+      console.error('Search error:', e);
     } finally {
       loading.style.display = 'none';
     }
   }
 
   function renderList(dataArray) {
+    content.innerHTML = '';
     let books = [];
     dataArray.forEach(item => {
       if (item.books && Array.isArray(item.books)) books.push(...item.books);
@@ -171,7 +180,9 @@
     else if (currentSource === 'reelshort') url = `https://api.sonzaix.indevs.in/reelshort/detail?bookId=${id}`;
 
     try {
-      const res = await fetch(url);
+      const proxied = proxy + encodeURIComponent(url);
+      const res = await fetch(proxied);
+      if (!res.ok) throw new Error(`Proxy error ${res.status}`);
       const json = await res.json();
       if (json.message !== 'success') throw new Error('Detail error');
 
@@ -179,14 +190,13 @@
       if (detailData.books && detailData.books[0]) detailData = detailData.books[0];
 
       document.getElementById('drama-title').textContent = title || detailData.drama_name || 'Judul Drama';
-      document.getElementById('drama-desc').textContent = detailData.description || 'Sinopsis tidak tersedia.';
+      document.getElementById('drama-desc').textContent = detailData.description || detailData.synopsis || 'Sinopsis tidak tersedia.';
 
       const epList = document.getElementById('episode-list');
       epList.innerHTML = '';
 
       let episodes = [];
 
-      // Melolo: video_list array dengan episode & video_id
       if (currentSource === 'melolo' && json.video_list && Array.isArray(json.video_list)) {
         episodes = json.video_list;
         episodes.forEach(ep => {
@@ -196,9 +206,7 @@
           btn.onclick = () => playEpisode(ep.video_id);
           epList.appendChild(btn);
         });
-      } 
-      // DramaBox: chapterList dengan chapterIndex
-      else if (currentSource === 'dramabox' && detailData.chapterList && Array.isArray(detailData.chapterList)) {
+      } else if (currentSource === 'dramabox' && detailData.chapterList && Array.isArray(detailData.chapterList)) {
         episodes = detailData.chapterList;
         episodes.forEach(ch => {
           const btn = document.createElement('div');
@@ -207,15 +215,13 @@
           btn.onclick = () => playEpisode(ch.chapterIndex);
           epList.appendChild(btn);
         });
-      } 
-      // Fallback untuk sumber lain atau jika gak ada list
-      else {
+      } else {
         const epCount = parseInt(detailData.episode_count || 1);
         for (let i = 1; i <= epCount; i++) {
           const btn = document.createElement('div');
           btn.className = 'ep-btn';
           btn.textContent = `Ep ${i}`;
-          btn.onclick = () => playEpisode(i - 1);  // 0-based index
+          btn.onclick = () => playEpisode(i - 1);
           epList.appendChild(btn);
         }
       }
@@ -233,32 +239,38 @@
   async function playEpisode(episodeParam) {
     let url = '';
     if (currentSource === 'melolo') {
-      url = `https://api.sonzaix.indevs.in/melolo/stream/${episodeParam}`;  // episodeParam = video_id
+      url = `https://api.sonzaix.indevs.in/melolo/stream/${episodeParam}`;
     } else if (currentSource === 'dramabox') {
       url = `https://api.sonzaix.indevs.in/dramabox/stream?dramaId=\( {currentDramaId}&episodeIndex= \){episodeParam}`;
     } else if (currentSource === 'freereels') {
-      url = `https://api.sonzaix.indevs.in/freereels/stream?dramaId=\( {currentDramaId}&episode= \){episodeParam + 1}`;  // asumsi 1-based
+      url = `https://api.sonzaix.indevs.in/freereels/stream?dramaId=\( {currentDramaId}&episode= \){episodeParam + 1}`;
     } else if (currentSource === 'reelshort') {
       url = `https://api.sonzaix.indevs.in/reelshort/stream?bookId=\( {currentDramaId}&episodeNumber= \){episodeParam + 1}`;
     }
 
     try {
-      const res = await fetch(url);
+      const proxied = proxy + encodeURIComponent(url);
+      const res = await fetch(proxied);
+      if (!res.ok) throw new Error(`Proxy error ${res.status}`);
       const json = await res.json();
       if (json.message !== 'success') throw new Error('Stream error');
 
-      let videoUrl = json.data?.qualities?.[0]?.url || json.data?.video_url || json.video_url || json.url;
-      if (!videoUrl) throw new Error('No playable URL found');
+      let videoUrl = json.data?.qualities?.[0]?.videoPath ||
+                     json.data?.qualities?.[0]?.url ||
+                     json.data?.video_url ||
+                     json.video_url ||
+                     json.url;
+      if (!videoUrl) throw new Error('No video URL found (cek qualities.videoPath di response)');
 
       player.src = videoUrl;
       player.load();
       player.play().catch(err => {
-        console.error('Autoplay blocked or error:', err);
-        alert('Video ready, tapi autoplay diblok browser. Klik play manual.');
+        console.error('Play error:', err);
+        alert('Video siap, tapi autoplay diblok. Klik play manual boss!');
       });
     } catch (e) {
-      alert('Gagal play episode: ' + e.message + '\nCek console (F12) > Network untuk response API.');
-      console.error('Stream error URL:', url, e);
+      alert('Gagal play: ' + e.message + '\nCek console F12 buat detail.');
+      console.error('Play error proxied:', proxied, e);
     }
   }
 
@@ -270,7 +282,6 @@
     };
   }
 
-  // Mulai
   loadPopular();
 </script>
 </body>
