--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
 <!-- ===== NAVIGATION BAR ===== -->
 <nav class="navbar">
   <div class="nav-logo" onclick="goHome()">
-    <div class="nav-logo-icon">SX</div>
+    <div class="nav-logo-icon">ZN</div>
     <span class="nav-logo-text">ZuLNaD Short Drama</span>
   </div>
 
